IngressProject/Manifest/ingressClass.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  namespace: ingress-project-dev
spec:
  controller: k8s.io/ingress-nginx
