IngressProject/Manifest/nginxController.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-controller-app
    namespace: ingress-project-dev
    labels:
        app: nginx-controller-app
        env: dev
spec:
    replicas: 1
    selector:
        matchLabels:
            name: nginx-controller-app
    template:
        metadata:
            labels:
                name: nginx-controller-app
        spec:
            serviceAccountName: ingress-nginx-serviceaccount
            containers:
            -   name: nginx-ingress-controller
                image: registry.k8s.io/ingress-nginx/controller:v1.11.3
#                image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.33.0
                args:
                    - /nginx-ingress-controller
                    - --publish-service=$(POD_NAMESPACE)/nodeport-service-ingress
                    - --election-id=ingress-controller-leader
                    - --controller-class=k8s.io/ingress-nginx
                    - --ingress-class=nginx
                ports:
                    -   name: http
                        containerPort: 80
                    -   name: https
                        containerPort: 443
