IngressProject/Manifest/service.yml
apiVersion: v1
kind: Service
metadata:
    name: ingress-project-service
    namespace: ingress-project-dev
    labels:
        env: dev
        app: ingress-project-app
spec:
    selector:
        app: ingress-project-app
    ports:
    -   port: 80
        targetPort: 8000
    type: ClusterIP
