IngressProject/Manifest/serviceIngress.yml
apiVersion: v1
kind: Service
metadata:
    name: nodeport-service-ingress
    namespace: ingress-project-dev
spec:
    selector:
        name: nginx-controller-app
    type: NodePort
    ports:
        -   name: http
            port: 80
            targetPort: 80
            protocol: TCP
        -   name: https
            port: 443
            targetPort: 443
            protocol: TCP
